src/test/ui/error-codes/E0130.stderr
error[E0130]: patterns aren't allowed in foreign function declarations
  --> $DIR/E0130.rs:12:12
   |
12 |     fn foo((a, b): (u32, u32));
   |            ^^^^^^ pattern not allowed in foreign function

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0130"
